--- a/src/sw/sparkle/Makefile.in
+++ b/src/sw/sparkle/Makefile.in
@@ -12,7 +12,10 @@ export NIST_KAT      ?= ${NIST_HOME}/LWC_AEAD_KAT_128_256.txt
 
 export NIST_INCLUDES  = ${NIST_HOME}/${NIST_IMP}
 
-export NIST_SOURCES   = $(filter-out ${NIST_HOME}/${NIST_IMP}/genkat_aead.c, $(wildcard ${NIST_HOME}/${NIST_IMP}/*.c))
-export NIST_HEADERS   = $(filter-out ${NIST_HOME}/${NIST_IMP}/genkat_aead.h, $(wildcard ${NIST_HOME}/${NIST_IMP}/*.h))
+export NIST_SOURCES   = $(filter-out ${NIST_HOME}/${NIST_IMP}/genkat_aead.c, $(wildcard ${NIST_HOME}/${NIST_IMP}/*.c  ))
+export NIST_SOURCES  +=                                                      $(wildcard ${NIST_HOME}/${NIST_IMP}/*.cpp) 
+export NIST_SOURCES  +=                                                      $(wildcard ${NIST_HOME}/${NIST_IMP}/*.s  ) 
+export NIST_SOURCES  +=                                                      $(wildcard ${NIST_HOME}/${NIST_IMP}/*.S  ) 
+export NIST_HEADERS   = $(filter-out ${NIST_HOME}/${NIST_IMP}/genkat_aead.h, $(wildcard ${NIST_HOME}/${NIST_IMP}/*.h  ))
 
 # =============================================================================
