fix slides -> can now build; bump re. content + structure; sorted out biblatex -> now generates references

--- a/doc/slide/Makefile
+++ b/doc/slide/Makefile
@@ -18,9 +18,11 @@ BUILD = ${REPO_HOME}/build/slide
 %.pdf : %.tex %.sty %.bib
 	@mkdir --parents ${BUILD}
 
-	@pdflatex -output-directory ${BUILD} ${<}
-	@pdflatex -output-directory ${BUILD} ${<}
-	@pdflatex -output-directory ${BUILD} ${<}
+	pdflatex -output-directory ${BUILD} ${*}.tex
+	biber --input-directory ${BUILD} --output-directory ${BUILD} ${*}
+	pdflatex -output-directory ${BUILD} ${*}.tex
+	biber --input-directory ${BUILD} --output-directory ${BUILD} ${*}
+	pdflatex -output-directory ${BUILD} ${*}.tex
 
 all   : slide.pdf
 
