--- a/src/hw/fpga/software/Makefile.in
+++ b/src/hw/fpga/software/Makefile.in
@@ -24,6 +24,10 @@ FPGA_DEF_CONF  = -DPHOTON_RV32_TYPE2
 FPGA_DEF_CONF += -DPHOTON_UNROLL 
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 
+FPGA_DEF_CONF  = -DROMULUS_RV32_TYPE2
+#FPGA_DEF_CONF += -DROMULUS_UNROLL 
+FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
+
 export FPGA_SWCONF = $(FPGA_DEF_CONF)
 
 # -----------------------------------------------------------------------------
