HW: update RTL for gift-cofb in RV32

--- a/src/hw/fpga/software/Makefile.in
+++ b/src/hw/fpga/software/Makefile.in
@@ -14,28 +14,47 @@ export SW = ${REPO_HOME}/src/sw
 # include build-related content for algorithm
 include ${SW}/${ALG}/Makefile.in
 
-FPGA_DEF_CONF  = -DSPARKLE_RV32_TYPE1
-FPGA_DEF_CONF += -DSPARKLE_UNROLL 
-FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
-FPGA_DEF_CONF += -DSPARKLE_RV32_ELL 
-FPGA_DEF_CONF += -DSPARKLE_REV_EXTERN -DSPARKLE_FWD_EXTERN 
-
-FPGA_DEF_CONF  = -DPHOTON_RV32_TYPE2
-FPGA_DEF_CONF += -DPHOTON_UNROLL 
+ifeq "${IMP}" "nist"
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 
-FPGA_DEF_CONF  = -DROMULUS_RV32_TYPE2
-#FPGA_DEF_CONF += -DROMULUS_UNROLL 
-FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
-
+else ifeq "${ALG}" "ascon"
 FPGA_DEF_CONF  = -DASCON_RV32_TYPE2
 FPGA_DEF_CONF += -DENABLE_ZBKB_ZBKX 
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
+KERNEL         =  Ascon_Permute_12rounds Ascon_Permute_6rounds
 
-FPGA_DEF_CONF  = -DXOODYAK_RV32_TYPE1
-#FPGA_DEF_CONF += -DENABLE_ZBKB_ZBKX 
+else ifeq "${ALG}" "gift"
+FPGA_DEF_CONF  = -DGIFT_RV32_TYPE1 -DGIFT_FIXSLICING
+FPGA_DEF_CONF += -DENABLE_ZBKB_ZBKX 
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
+KERNEL         =  giftb128_bitslicing giftb128_fixslicing precompute_rkeys
 
+else ifeq "${ALG}" "photon"
+FPGA_DEF_CONF  = -DPHOTON_RV32_TYPE2
+FPGA_DEF_CONF += -DPHOTON_UNROLL 
+FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
+KERNEL         = PHOTON_Permutation
+
+else ifeq "${ALG}" "romulus"
+FPGA_DEF_CONF  = -DROMULUS_RV32_TYPE2
+FPGA_DEF_CONF += -DROMULUS_UNROLL 
+FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
+KERNEL         = skinny_128_384_plus_enc
+
+else ifeq "${ALG}" "sparkle"
+FPGA_DEF_CONF  = -DSPARKLE_RV32_TYPE4
+FPGA_DEF_CONF += -DSPARKLE_RV32_ELL -DSPARKLE_RV32_RCON
+FPGA_DEF_CONF += -DSPARKLE_UNROLL 
+FPGA_DEF_CONF += -DSPARKLE_REV_EXTERN -DSPARKLE_FWD_EXTERN 
+FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
+KERNEL         = sparkle_opt
+
+else ifeq "${ALG}" "xoodyak"
+FPGA_DEF_CONF  = -DXOODYAK_RV32_TYPE2
+FPGA_DEF_CONF += -DENABLE_ZBKB_ZBKX 
+FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
+KERNEL         = Xoodoo_Permute_12rounds
+endif
 
 export FPGA_SWCONF = $(FPGA_DEF_CONF)
 
@@ -92,7 +111,8 @@ $(FPGA_OUTBIN) : $(FPGA_TARGET)
 	@${GCC_PREFIX}-objcopy -O binary $< $@
 
 ${FPGA_TARGET}.asm : ${FPGA_TARGET}
-	@${GCC_PREFIX}-objdump --disassemble-all ${<} > ${@}
+	@${GCC_PREFIX}-objdump -fhSD ${<} > ${@}
+	python3 ${REPO_HOME}/bin/size.py ${@} $(KERNEL)
 
 fpga-run : $(FPGA_OUTBIN) ${FPGA_TARGET}.asm 
 	@$(FPGA)/script/upload.py --port $(PORT) --baud 115200 upload $(FPGA_OUTBIN) --stdout
