sanitise documentation; bring some macro definitions in line with documentation (e.g., re. unrolling)

--- a/src/hw/fpga/software/Makefile.in
+++ b/src/hw/fpga/software/Makefile.in
@@ -31,27 +31,27 @@ KERNEL         =  giftb128_bitslicing giftb128_fixslicing precompute_rkeys
 
 else ifeq "${ALG}" "photon"
 FPGA_DEF_CONF  = -DPHOTON_RV32_TYPE1
-FPGA_DEF_CONF += -DPHOTON_UNROLL 
+FPGA_DEF_CONF += -DPHOTON_RV32_UNROLL 
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 KERNEL         = PHOTON_Permutation
 
 else ifeq "${ALG}" "romulus"
 FPGA_DEF_CONF  = -DROMULUS_RV32_TYPE1
-FPGA_DEF_CONF += -DROMULUS_UNROLL 
+FPGA_DEF_CONF += -DROMULUS_RV32_UNROLL 
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 KERNEL         = skinny_128_384_plus_enc
 
 else ifeq "${ALG}" "sparkle"
 FPGA_DEF_CONF  = -DSPARKLE_RV32_TYPE4
 FPGA_DEF_CONF += -DSPARKLE_RV32_ELL -DSPARKLE_RV32_RCON
-FPGA_DEF_CONF += -DSPARKLE_UNROLL 
+FPGA_DEF_CONF += -DSPARKLE_RV32_UNROLL 
 FPGA_DEF_CONF += -DSPARKLE_REV_EXTERN -DSPARKLE_FWD_EXTERN 
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 KERNEL         = sparkle_opt
 
 else ifeq "${ALG}" "jambu"
 FPGA_DEF_CONF  = -DJAMBU_RV32_TYPE3
-FPGA_DEF_CONF += -DJAMBU_UNROLL 
+FPGA_DEF_CONF += -DJAMBU_RV32_UNROLL 
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 KERNEL         = state_update
 
