add timing measurement for the reference kernels

--- a/src/hw/fpga/software/Makefile.in
+++ b/src/hw/fpga/software/Makefile.in
@@ -16,6 +16,7 @@ include ${SW}/${ALG}/Makefile.in
 
 ifeq "${IMP}" "nist"
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
+KERNEL         =  P12 P6 giftb128 PHOTON_Permutation skinny_128_384_plus_enc sparkle_opt state_update Xoodoo_Permute_Nrounds
 
 else ifeq "${ALG}" "ascon"
 FPGA_DEF_CONF  = -DASCON_RV32_TYPE2
@@ -23,8 +24,15 @@ FPGA_DEF_CONF += -DENABLE_ZBKB_ZBKX
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 KERNEL         =  P12 P6
 
+else ifeq "${ALG}" "elephant"
+FPGA_DEF_CONF  = -DELEPHANT_RV32_TYPE2
+#FPGA_DEF_CONF += -DELEPHANT_STATE_5X32B
+FPGA_DEF_CONF += -DELEPHANT_STATE_4X40B
+FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
+KERNEL         =  Spongent160_4x40b Spongent160_5x32b
+
 else ifeq "${ALG}" "gift"
-FPGA_DEF_CONF  = -DGIFT_RV32_TYPE1 -DGIFT_FIXSLICING
+FPGA_DEF_CONF  = -DGIFT_RV32_TYPE2 -DGIFT_FIXSLICING
 #FPGA_DEF_CONF += -DENABLE_ZBKB_ZBKX 
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 KERNEL         =  giftb128_bitslicing giftb128_fixslicing precompute_rkeys
@@ -36,14 +44,14 @@ FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASUR
 KERNEL         = PHOTON_Permutation
 
 else ifeq "${ALG}" "romulus"
-FPGA_DEF_CONF  = -DROMULUS_RV32_TYPE1
+FPGA_DEF_CONF  = -DROMULUS_RV32_TYPE2
 FPGA_DEF_CONF += -DROMULUS_RV32_UNROLL 
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 KERNEL         = skinny_128_384_plus_enc
 
 else ifeq "${ALG}" "sparkle"
-FPGA_DEF_CONF  = -DSPARKLE_RV32_TYPE4
-FPGA_DEF_CONF += -DSPARKLE_RV32_ELL -DSPARKLE_RV32_RCON
+FPGA_DEF_CONF  = -DSPARKLE_RV32_TYPE1
+#FPGA_DEF_CONF += -DSPARKLE_RV32_ELL -DSPARKLE_RV32_RCON
 FPGA_DEF_CONF += -DSPARKLE_RV32_UNROLL 
 FPGA_DEF_CONF += -DSPARKLE_REV_EXTERN -DSPARKLE_FWD_EXTERN 
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
@@ -56,7 +64,7 @@ FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASUR
 KERNEL         = state_update
 
 else ifeq "${ALG}" "xoodyak"
-FPGA_DEF_CONF  = -DXOODYAK_RV32_TYPE2
+FPGA_DEF_CONF  = -DXOODYAK_RV32_TYPE1
 FPGA_DEF_CONF += -DENABLE_ZBKB_ZBKX 
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 KERNEL         = Xoodoo_Permute_12rounds
@@ -90,7 +98,7 @@ GCC_PREFIX = ${RISCV_ROCKET}/bin/riscv64-unknown-elf
 
 # pass-through environment variable as macros for use in source code
 ifeq "${IMP}" "nist"
-FPGA_GCC_FLAGS += -DALG="\"${ALG}\"" ${FPGA_SWCONF} -DARCH="\"${ARCH}\"" -DIMP="\"${IMP}\""
+FPGA_GCC_FLAGS += -DALG="\"${ALG}\"" ${FPGA_SWCONF} -DARCH="\"${ARCH}\"" -DIMP="\"${IMP}\"" -D${ALG}
 else
 FPGA_GCC_FLAGS += -DALG="\"${ALG}\"" ${FPGA_SWCONF} -DARCH="\"${ARCH}\"" -DIMP="\"${IMP}\"" -DLWISE
 endif
