--- a/src/hw/fpga/software/FPGA_SWCONF.in
+++ b/src/hw/fpga/software/FPGA_SWCONF.in
@@ -13,8 +13,8 @@ FPGA_DEF_CONF += -DENABLE_ZBKB_ZBKX
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 
 else ifeq "${ALG}" "elephant"
-FPGA_DEF_CONF  = -DELEPHANT_RV32_TYPE3
-FPGA_DEF_CONF += -DELEPHANT_STATE_5X32B
+FPGA_DEF_CONF  = -DELEPHANT_RV32_TYPE2
+#FPGA_DEF_CONF += -DELEPHANT_RV32_UNROLL
 #FPGA_DEF_CONF += -DELEPHANT_STATE_4X40B
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 
