--- a/src/sw/jambu/Makefile.in
+++ b/src/sw/jambu/Makefile.in
@@ -7,7 +7,7 @@
 # =============================================================================
 
 export NIST_HOME     ?= ${REPO_HOME}/src/sw/jambu/nist/Implementations/crypto_aead/tinyjambu128v2
-export NIST_IMP      ?= ref
+export NIST_IMP      ?= opt
 export NIST_KAT      ?= ${NIST_HOME}/LWC_AEAD_KAT_128_96.txt
 
 export NIST_INCLUDES  = ${NIST_HOME}/${NIST_IMP}
