add experimence for Grain and fix a bug in grain (x64) to run on FPGA.

--- a/src/hw/fpga/software/FPGA_SWCONF.in
+++ b/src/hw/fpga/software/FPGA_SWCONF.in
@@ -23,14 +23,18 @@ FPGA_DEF_CONF  = -DGIFT_RV32_TYPE2 -DGIFT_FIXSLICING
 #FPGA_DEF_CONF += -DENABLE_ZBKB_ZBKX 
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 
+else ifeq "${ALG}" "grain"
+FPGA_DEF_CONF  = -DGRAIN_RV32_TYPE1      -DDRIVER_TEST_BYPASS
+FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
+
 else ifeq "${ALG}" "photon"
 FPGA_DEF_CONF  = -DPHOTON_RV32_TYPE1
 FPGA_DEF_CONF += -DPHOTON_RV32_UNROLL 
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 
 else ifeq "${ALG}" "romulus"
-FPGA_DEF_CONF  = -DROMULUS_RV32_TYPE3
-FPGA_DEF_CONF += -DROMULUS_RV32_UNROLL 
+FPGA_DEF_CONF  = -DROMULUS_RV32_TYPE1   -DROMULUS_FIXSLICING
+FPGA_DEF_CONF += -DROMULUS_RV32_UNROLL  -DDRIVER_TEST_BYPASS
 FPGA_DEF_CONF += -DDRIVER_TRIALS_WARM=10 -DDRIVER_TRIALS_REAL=50 -DDRIVER_MEASURE=1 
 
 else ifeq "${ALG}" "sparkle"
